# rachid

./: DEPLOYMENT_GUIDE.md  NATIVE_SETUP.md  build.bat  build.sh  index.html  installer.iss  package-lock.json  package.json
public/: manifest.webmanifest  sw.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: i18n.tsx
src/pages/: ActivationGate.tsx  ChecksPage.tsx  CreditsPage.tsx  MainPage.tsx  OverallTotalsPage.tsx  ReportsPage.tsx  SettingsPage.tsx  StorePage.tsx  TanksPage.tsx  TaxesZakatPage.tsx  WorkersPage.tsx
