[package]
name = "waali-gas-station"
version = "1.0.0"
description = "نظام إدارة محطة وقود وعلي"
authors = ["Waali Gas Station Team"]
license = "MIT"
repository = ""
default-run = "waali-gas-station"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["api-all", "system-tray", "updater"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]